Fixed header link spacing on mobile

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     display: flex;
     color: #FF8C00;
     gap: 2rem;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
 }
 
 /* Body
